working sketch of distributed annotation framework using the browser API

--- a/src/main/resources/fxml/DatasetSelecter.fxml
+++ b/src/main/resources/fxml/DatasetSelecter.fxml
@@ -7,30 +7,34 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox id="AnchorPane" 
+<HBox id="AnchorPane" 
       prefHeight="400.0" prefWidth="250.0" 
       styleClass="mainFxmlClass" xmlns:fx="http://javafx.com/fxml/1" 
       fx:controller="org.mskcc.shenkers.annotator.DatasetSelecterController"
       spacing="15"
       alignment="CENTER"
-      fillWidth="false" 
+      fillHeight="false" 
 >
-    <HBox spacing="15">
-    <Button fx:id="selectUser" onAction="#userSelected"  text="Select User"/>
-    <Label fx:id="selectedUser" text="unselected" />
-    </HBox>
-    <ListView fx:id="users" />
-    <HBox spacing="15">
-    <Button fx:id="selectSource" onAction="#sourceSelected" text="Select Source"/>
-    <Label fx:id="selectedSource" text="unselected" />
-    </HBox>
-    <ListView fx:id="sources" />
-    <HBox spacing="15">
-    <Button fx:id="addUser" onAction="#userAdded" text="Add User"/>
-    <TextField fx:id="newUser" prefWidth="100" />
-    </HBox>
-    <Button fx:id="annotate" onAction="#startAnnotation" text="Review dataset"/>
+    <VBox alignment="CENTER" spacing="15">
+        <HBox spacing="15" alignment="CENTER_LEFT">
+            <Label text="Selected User:"/>
+            <TextField prefWidth="100" fx:id="selectedUser" text="n/a" />
+        </HBox>
+        <ListView fx:id="users" />
+        <HBox spacing="15" alignment="CENTER_LEFT">
+            <Label text="Selected Source:"/>
+            <TextField prefWidth="100"  fx:id="selectedSource" text="n/a" />
+        </HBox>
+        <ListView fx:id="sources" />
+        <HBox spacing="15">
+            <Button fx:id="addUser" onAction="#userAdded" text="Add User"/>
+            <TextField fx:id="newUser" prefWidth="100" />
+        </HBox>
+        <HBox alignment="BOTTOM_RIGHT" >
+            <Button alignment="BASELINE_RIGHT"  fx:id="annotate" onAction="#startAnnotation" text="Review dataset"/>
+        </HBox>
+    </VBox>
     <stylesheets>
         <URL value="@/styles/datasetselecter.css"/>
     </stylesheets>
-</VBox>
+</HBox>
